feat: новые блоки

--- a/index.html
+++ b/index.html
@@ -118,15 +118,149 @@
     </section>
 
     <section class="navigation">
-      
+      <a href="#" class="navigation__button">
+        <div class="navigation__container">
+          <h3 class="navigation__city">Южно-Сахалинск</h3>
+          <p class="navigation__advice">Оставить идею</p>
+        </div>
+      </a>
+      <a href="#" class="navigation__button">
+        <div class="navigation__container">
+          <h3 class="navigation__city">Уфа</h3>
+          <p class="navigation__advice">Оставить идею</p>
+        </div>
+      </a>
+      <a href="#" class="navigation__button">
+        <div class="navigation__container">
+          <h3 class="navigation__city">Екатеринбург</h3>
+          <p class="navigation__advice">Оставить идею</p>
+        </div>
+      </a>
     </section>
 
+    <section class="cities">
+      <h2 class="title">Города и проекты, с которыми работаем</h2>
 
+
+      <ul class="cities__list">
+        <li class="cities__item">
+           <div class="city">
+              <div class="city__info">
+                <img src="./images/covers/city1.jpg" alt="фото Екатеринбург" class="city__img">
+                <h3 class="city__title"><a href="#" class="">Екатеринбург</a></h3>
+                <p class="city__subtitle">Актуальные проекты в городе</p>
+                <p class="city__description">
+                    В рамках архитектурного конкурса Институт Генплана Москвы разрабатывает концепцию развития 
+                    общественных пространств на одной из самых знаковых территорий города — набережной Городского пруда.
+                </p>
+              </div>
+              <ul class="city__projects">
+                <li class="city__project city__project-long">
+                  <a href="#" class="project">
+                    <h4 class="project__title">Разработка концепции развития общественных пространств набережной Городского пруда</h4>
+                    <span class="project__tag">
+                      Карта идей
+                      <svg width="19" height="20" viewBox="0 0 19 20" >
+                        <use xlink:href="./images/sprite.svg#arrow-right"></use>
+                      </svg>
+                    </span>
+                  </a>
+                </li>  
+              </ul>
+           </div>
+        </li>
+
+        <li class="cities__item">
+          <div class="city">
+             <div class="city__info">
+               <img src="./images/covers/city3.jpg" alt="фото Южно-Сахалинск" class="city__img">
+               <h3 class="city__title"><a href="#" class="">Южно-Сахалинск</a></h3>
+               <p class="city__subtitle">Актуальные проекты в городе</p>
+               <p class="city__description">
+                В рамках архитектурного конкурса Институт Генплана Москвы разрабатывает концепцию развития общественных пространств..
+               </p>
+             </div>
+             <ul class="city__projects">
+               <li class="city__project">
+                 <a href="#" class="project">
+                   <h4 class="project__title">Опрос жителей Корсаковского и Анивского городских округов</h4>
+                   <span class="project__tag">
+                     Карта идей
+                     <svg width="19" height="20" viewBox="0 0 19 20" >
+                       <use xlink:href="./images/sprite.svg#arrow-right"></use>
+                     </svg>
+                   </span>
+                 </a>
+               </li>  
+               <li class="city__project">
+                 <a href="#" class="project">
+                   <h4 class="project__title">Проект генерального плана</h4>
+                   <span class="project__tag">
+                     Проект генплана
+                     <svg width="19" height="20" viewBox="0 0 19 20" >
+                       <use xlink:href="./images/sprite.svg#arrow-right"></use>
+                     </svg>
+                   </span>
+                 </a>
+               </li>  
+               <li class="city__project">
+                 <a href="#" class="project">
+                   <h4 class="project__title">Карта идей для генплана Южно-Сахалинска</h4>
+                   <span class="project__tag">
+                     Проект генплана
+                     <svg width="19" height="20" viewBox="0 0 19 20" >
+                       <use xlink:href="./images/sprite.svg#arrow-right"></use>
+                     </svg>
+                   </span>
+                 </a>
+               </li>  
+             </ul>
+          </div>
+       </li>
+
+        <li class="cities__item">
+          <div class="city">
+             <div class="city__info">
+               <img src="./images/covers/city2.jpg" alt="фото Уфа" class="city__img">
+               <h3 class="city__title"><a href="#" class="">Уфа</a></h3>
+               <p class="city__subtitle">Актуальные проекты в городе</p>
+               <p class="city__description">
+                Институт Генплана Москвы разрабатывает для Уфы концепцию пространственного развития.
+               </p>
+             </div>
+             <ul class="city__projects">
+               <li class="city__project city__project-long">
+                 <a href="#" class="project">
+                   <h4 class="project__title">Карта идей для генплана Уфы</h4>
+                   <span class="project__tag">
+                     Карта идей
+                     <svg width="19" height="20" viewBox="0 0 19 20" >
+                       <use xlink:href="./images/sprite.svg#arrow-right"></use>
+                     </svg>
+                   </span>
+                 </a>
+               </li>  
+               <li class="city__project city__project-long">
+                 <a href="#" class="project">
+                   <h4 class="project__title">Карта идей для генплана Уфы</h4>
+                   <span class="project__tag">
+                     Карта идей
+                     <svg width="19" height="20" viewBox="0 0 19 20" >
+                       <use xlink:href="./images/sprite.svg#arrow-right"></use>
+                     </svg>
+                   </span>
+                 </a>
+               </li>  
+             </ul>
+          </div>
+       </li>
+      </ul>
+    </section>
 
   </main>
 
   <footer class="footer">
-    footer
+    
   </footer>
 </body>
 
