feat: о проекте и футер

--- a/index.html
+++ b/index.html
@@ -257,10 +257,61 @@
       </ul>
     </section>
 
+
+    <section class="about">
+      <h2 class="title">Зачем нужна карта</h2>
+
+      <ul class="about__list">
+        <li class="about__card">
+          <h4 class="about__card-title">Идеи и пожелания</h4>
+          <p class="about__card-text">
+            С помощью сервиса горожане могут оставить на карте идеи и пожелания, касающиеся развития и изменения 
+            инфраструктуры города или конкретной территории, над которой работают проектировщики.
+          </p>
+        </li>
+        <li class="about__card">
+          <h4 class="about__card-title">Проектирование</h4>
+          <p class="about__card-text">
+            После того как идеи появляются на карте, каждый может проголосовать за те инициативы, которые поддерживает. 
+            Так наши специалисты узнают, чего не хватает многим жителям или что они хотят в своем городе изменить.
+          </p>
+        </li>
+        <li class="about__card">
+          <h4 class="about__card-title">Предложения к проектам</h4>
+          <p class="about__card-text">
+            Если проект документации предполагает этап публичного рассмотрения, то мы предлагаем ознакомиться 
+            с его содержанием и проектировочными решениями на новой карте..
+          </p>
+        </li>
+        <li class="about__card">
+          <h4 class="about__card-title">Что может сервис</h4>
+          <p class="about__card-text">
+            Платформа «Мой город» позволяет горожанам участвовать в разработке градостроительной документации и влиять 
+            на проектировочные решения всего города или его части, в зависмости от типа проекта. На разных этапах разработки 
+            проектов вы можете оставить на интерактивной карте свои идеи и предложения, проголосовать за понравившиеся. .
+          </p>
+        </li>
+      </ul> 
+      <div class="about__layout">
+        <div class="about__bg"></div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
-    
+      <img src="./images/logos/main-logo-white.svg" alt="логотип Института Генплана" class="footer__logo">
+      <div class="footer__container">
+        <div class="footer__block">
+          <span><p>техническая поддержка:</p> <a href="mailto:gorod@genplanmos.ru" class="">gorod@genplanmos.ru</a></span>
+          <span><p>пресс-служба:</p>  <a href="mailto:press@genplanmos.ru" class="">press@genplanmos.ru</a></span>
+        </div>
+        <p class="footer__block">© 2023 Платформа «Мой город»  Разработана Институтом Генплана Москвы</p>
+        <div class="footer__block">
+          <a href="" class="">Пользовательское соглашение</a>
+          <a href="" class="">Политика обработки персональных данных</a>
+          <a href="" class="">Государственное автономное учреждение «Институт Генплана Москвы»</a>
+        </div>
+      </div>
   </footer>
 </body>
 
