feat: верстка главной

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
   </header>
 
   <main class="main">
-
     <section class="lead">
       <div class="carousel" id="leadcrsl">
         <div class="carousel__slide">
@@ -225,7 +224,7 @@
                <h3 class="city__title"><a href="#" class="">Уфа</a></h3>
                <p class="city__subtitle">Актуальные проекты в городе</p>
                <p class="city__description">
-                Институт Генплана Москвы разрабатывает для Уфы концепцию пространственного развития.
+                 Институт Генплана Москвы разрабатывает для Уфы концепцию пространственного развития.
                </p>
              </div>
              <ul class="city__projects">
@@ -300,17 +299,15 @@
 
   <footer class="footer">
       <img src="./images/logos/main-logo-white.svg" alt="логотип Института Генплана" class="footer__logo">
-      <div class="footer__container">
-        <div class="footer__block">
-          <span><p>техническая поддержка:</p> <a href="mailto:gorod@genplanmos.ru" class="">gorod@genplanmos.ru</a></span>
-          <span><p>пресс-служба:</p>  <a href="mailto:press@genplanmos.ru" class="">press@genplanmos.ru</a></span>
-        </div>
-        <p class="footer__block">© 2023 Платформа «Мой город»  Разработана Институтом Генплана Москвы</p>
-        <div class="footer__block">
-          <a href="" class="">Пользовательское соглашение</a>
-          <a href="" class="">Политика обработки персональных данных</a>
-          <a href="" class="">Государственное автономное учреждение «Институт Генплана Москвы»</a>
-        </div>
+      <div class="footer__emails">
+        <div><p>техническая поддержка:</p> <a href="mailto:gorod@genplanmos.ru" class="">gorod@genplanmos.ru</a></div>
+        <div><p>пресс-служба:</p>  <a href="mailto:press@genplanmos.ru" class="">press@genplanmos.ru</a></div>
+      </div>
+      <p class="footer__copyright">© 2023 Платформа «Мой город»  Разработана Институтом Генплана Москвы</p>
+      <div class="footer__links">
+        <a href="" class="">Пользовательское соглашение</a>
+        <a href="" class="">Политика обработки персональных данных</a>
+        <a href="" class="">Государственное автономное учреждение «Институт Генплана Москвы»</a>
       </div>
   </footer>
 </body>
