feat:  страница одного города

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </button>
 
         <ul class="header__list">
-          <li class="header__item"><a href="#" class="header__link">Екатеринбург</a></li>
-          <li class="header__item"><a href="#" class="header__link">Уфа</a></li>
-          <li class="header__item"><a href="#" class="header__link">Южно-Сахалинск</a></li>
+          <li class="header__item"><a href="./pages/city.html" class="header__link">Екатеринбург</a></li>
+          <li class="header__item"><a href="./pages/city.html" class="header__link">Уфа</a></li>
+          <li class="header__item"><a href="./pages/city.html" class="header__link">Южно-Сахалинск</a></li>
           <li class="header__item"><a href="#" class="header__link">О сервисе</a></li>
           <li class="header__item"><a href="#" class="header__link">Модерация</a></li>
 
@@ -84,7 +84,7 @@
                   <p>Мой город</p>
                   <p>интерактивная карта городского планирования</p>
                 </div>
-                <a href="#" class="lead__button">Узнать подробнее</a>
+                <a href="index.html" class="lead__button">Узнать подробнее</a>
               </div>
             </div>
           </div>
@@ -108,7 +108,7 @@
                   <p>Практика</p>
                   <p>в институте генплана москвы</p>
                 </div>
-                <a href="#" class="lead__button">Узнать подробнее</a>
+                <a href="https://praktika.genplanmos.ru/" class="lead__button">Узнать подробнее</a>
               </div>
             </div>
           </div>
@@ -146,7 +146,7 @@
            <div class="city">
               <div class="city__info">
                 <img src="./images/covers/city1.jpg" alt="фото Екатеринбург" class="city__img">
-                <h3 class="city__title"><a href="#" class="">Екатеринбург</a></h3>
+                <h3 class="city__title"><a href="./pages/city.html" class="">Екатеринбург</a></h3>
                 <p class="city__subtitle">Актуальные проекты в городе</p>
                 <p class="city__description">
                     В рамках архитектурного конкурса Институт Генплана Москвы разрабатывает концепцию развития 
@@ -155,7 +155,7 @@
               </div>
               <ul class="city__projects">
                 <li class="city__project city__project-long">
-                  <a href="#" class="project">
+                  <a href="./pages/city.html" class="project">
                     <h4 class="project__title">Разработка концепции развития общественных пространств набережной Городского пруда</h4>
                     <span class="project__tag">
                       Карта идей
@@ -173,7 +173,7 @@
           <div class="city">
              <div class="city__info">
                <img src="./images/covers/city3.jpg" alt="фото Южно-Сахалинск" class="city__img">
-               <h3 class="city__title"><a href="#" class="">Южно-Сахалинск</a></h3>
+               <h3 class="city__title"><a href="./pages/city.html" class="">Южно-Сахалинск</a></h3>
                <p class="city__subtitle">Актуальные проекты в городе</p>
                <p class="city__description">
                 В рамках архитектурного конкурса Институт Генплана Москвы разрабатывает концепцию развития общественных пространств..
@@ -181,7 +181,7 @@
              </div>
              <ul class="city__projects">
                <li class="city__project">
-                 <a href="#" class="project">
+                 <a href="./pages/city.html" class="project">
                    <h4 class="project__title">Опрос жителей Корсаковского и Анивского городских округов</h4>
                    <span class="project__tag">
                      Карта идей
@@ -192,7 +192,7 @@
                  </a>
                </li>  
                <li class="city__project">
-                 <a href="#" class="project">
+                 <a href="./pages/city.html" class="project">
                    <h4 class="project__title">Проект генерального плана</h4>
                    <span class="project__tag">
                      Проект генплана
@@ -203,7 +203,7 @@
                  </a>
                </li>  
                <li class="city__project">
-                 <a href="#" class="project">
+                 <a href="./pages/city.html" class="project">
                    <h4 class="project__title">Карта идей для генплана Южно-Сахалинска</h4>
                    <span class="project__tag">
                      Проект генплана
@@ -221,7 +221,7 @@
           <div class="city">
              <div class="city__info">
                <img src="./images/covers/city2.jpg" alt="фото Уфа" class="city__img">
-               <h3 class="city__title"><a href="#" class="">Уфа</a></h3>
+               <h3 class="city__title"><a href="./pages/city.html" class="">Уфа</a></h3>
                <p class="city__subtitle">Актуальные проекты в городе</p>
                <p class="city__description">
                  Институт Генплана Москвы разрабатывает для Уфы концепцию пространственного развития.
@@ -229,7 +229,7 @@
              </div>
              <ul class="city__projects">
                <li class="city__project city__project-long">
-                 <a href="#" class="project">
+                 <a href="./pages/city.html" class="project">
                    <h4 class="project__title">Карта идей для генплана Уфы</h4>
                    <span class="project__tag">
                      Карта идей
@@ -240,7 +240,7 @@
                  </a>
                </li>  
                <li class="city__project city__project-long">
-                 <a href="#" class="project">
+                 <a href="./pages/city.html" class="project">
                    <h4 class="project__title">Карта идей для генплана Уфы</h4>
                    <span class="project__tag">
                      Карта идей
@@ -305,9 +305,9 @@
       </div>
       <p class="footer__copyright">© 2023 Платформа «Мой город»  Разработана Институтом Генплана Москвы</p>
       <div class="footer__links">
-        <a href="" class="">Пользовательское соглашение</a>
-        <a href="" class="">Политика обработки персональных данных</a>
-        <a href="" class="">Государственное автономное учреждение «Институт Генплана Москвы»</a>
+        <a href="https://genplanmos.ru/useragreement/" title="пользовательское соглашение">Пользовательское соглашение</a>
+        <a href="https://genplanmos.ru/policypersonaldata/" title="политика конфиденциальности">Политика обработки персональных данных</a>
+        <a href="https://genplanmos.ru/" title="сайт Института Генплана Москвы">Государственное автономное учреждение «Институт Генплана Москвы»</a>
       </div>
   </footer>
 </body>
