feat: доделать страницу города

--- a/pages/city.html
+++ b/pages/city.html
@@ -180,6 +180,75 @@
 
       <a href="#" class="ideas__showmore">Смотреть все идеи</a>
     </section>
+
+    <section class="publications">
+      <h2 class="publications__title">ПУБЛИКАЦИИ И ДОПОЛНИТЕЛЬНЫЕ МАТЕРИАЛЫ</h2>
+
+      <ul class="publications__list">
+        <li class="publications_item">
+          <div class="publication">
+            <div class="publication__info">
+              <a href="#" class="publication__type">Мероприятие</a>
+              <span class="publication__filler"></span>
+              <time class="publication__date">12.08.22</time>
+            </div>  
+            <a href="#" class="publication__img">
+              <img  src="../images/cardimage/pub3.jpg" alt="img" class="">
+            </a>
+            <h2 class="publication__title">
+              <a href="#" class="">Title card</a>
+            </h2>
+            <div class="publication__text">
+              27 января 2021 года прошло заседание Клуба BIM-Лидеров в проектировании объектов 
+              транспортной инфраструктуры. Мероприятие завершилось традиционной церемонией награждения 
+              «BIM-компании года», которой в этом году стал Институт Генплана.
+            </div>
+          </div>
+        </li>
+
+        <li class="publications_item">
+          <div class="publication">
+            <div class="publication__info">
+              <a href="#" class="publication__type">Мероприятие</a>
+              <span class="publication__filler"></span>
+              <time class="publication__date">12.08.22</time>
+            </div>  
+            <a href="#" class="publication__img">
+              <img  src="../images/cardimage/pub1.jpg" alt="img" class="">
+            </a>
+            <h2 class="publication__title">
+              <a href="#" class="">Title card</a>
+            </h2>
+            <div class="publication__text">
+              27 января 2021 года прошло заседание Клуба BIM-Лидеров в проектировании объектов 
+              транспортной инфраструктуры. Мероприятие завершилось традиционной церемонией награждения 
+              «BIM-компании года», которой в этом году стал Институт Генплана.
+            </div>
+          </div>
+        </li>
+
+        <li class="publications_item">
+          <div class="publication">
+            <div class="publication__info">
+              <a href="#" class="publication__type">Мероприятие</a>
+              <span class="publication__filler"></span>
+              <time class="publication__date">12.08.22</time>
+            </div>  
+            <a href="#" class="publication__img">
+              <img  src="../images/cardimage/pub2.jpg" alt="img" class="">
+            </a>
+            <h2 class="publication__title">
+              <a href="#" class="">Title card</a>
+            </h2>
+            <div class="publication__text">
+              27 января 2021 года прошло заседание Клуба BIM-Лидеров в проектировании объектов 
+              транспортной инфраструктуры. Мероприятие завершилось традиционной церемонией награждения 
+              «BIM-компании года», которой в этом году стал Институт Генплана.
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
   </main>
 
   <footer class="footer">
