--- a/pages/city.html
+++ b/pages/city.html
@@ -123,12 +123,12 @@
           <img src="../images/cardimage/ideas1.jpg" alt="Идея1" class="ideas__img">
           <div class="ideas__card">
             <small class="ideas__tag">#Общественные пространства</small>
-            <h3 class="ideas__cardtitle"><a href="#">Современная детская площадка</a></h3>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">Современная детская площадка</a></h3>
             <p class="ideas__description">Проблема в том, что в этом парке нет элементарного пешеходного покрытия и нет освещения</p>
   
             <div class="ideas__footer">
               <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
-              <button class="ideas__like">
+              <button class="ideas__like like">
                 <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
                 </svg>
@@ -143,12 +143,12 @@
           <img src="../images/cardimage/ideas2.jpg" alt="Идея1" class="ideas__img">
           <div class="ideas__card">
             <small class="ideas__tag">#Функциональные зоны</small>
-            <h3 class="ideas__cardtitle"><a href="#">Функциональное пространство</a></h3>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">Функциональное пространство</a></h3>
             <p class="ideas__description">Не плохо было бы убрать тюрьму подальше от цента.А большая часть завода давно</p>
 
             <div class="ideas__footer">
               <p class="ideas__author">Автор идеи: <span>Вася В.</span></p>
-              <button class="ideas__like">
+              <button class="ideas__like like">
                 <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
                 </svg>
@@ -162,12 +162,12 @@
           <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
           <div class="ideas__card">
             <small class="ideas__tag">#Общественные пространства</small>
-            <h3 class="ideas__cardtitle"><a href="#">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
             <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
 
             <div class="ideas__footer">
               <p class="ideas__author">Автор идеи: <span>Алексей Е.</span></p>
-              <button class="ideas__like liked">
+              <button class="ideas__like like liked">
                 <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
                 </svg>
@@ -249,6 +249,31 @@
         </li>
       </ul>
     </section>
+
+    <section class="about-project">
+      <h2 class="about-project__title">О проекте</h2>
+
+      <ul class="about-project__list">
+        <li class="about-project__item">
+          <h3 class="about-project__item-title">Что такое карта идей</h3>
+          <p class="about-project__item-text">Карта идей — совместный проект Москомархитектуры и Института Генплана Москвы. Карта идей помогает собрать идеи местных жителей по улучшению города. </p>
+        </li>
+        <li class="about-project__item">
+          <h3 class="about-project__item-title">Почему мы собираем  идеи</h3>
+          <p class="about-project__item-text">Мы уверены, что идеи жителей города уникальны и хотим, чтобы локальные идеи были оставлены на карте. Эти идеи будут учтены при разработке проектов по развитию города. </p>
+        </li>
+        <li class="about-project__item">
+          <h3 class="about-project__item-title">Какие идеи мы ждем</h3>
+          <p class="about-project__item-text">На карте вы можете сообщить нам о нехватке детских садов, рекреационных пространств, пробках и даже собственном видении экономических перспектив города. </p>
+        </li>
+        <li class="about-project__item">
+          <h3 class="about-project__item-title">Как работает карта идей</h3>
+          <p class="about-project__item-text">Вы сохраняете идею на карте под соответствующей категорией, после модерации идея появляется на карте. После окончания сбора идей на карте, разработчики мастерплана
+             города изучают идеи и учитывают их при разработке своих проектов. Просим при описании идеи выбирать корректные категории идей. Если вы не нашли подходящей категории, но вам важно высказаться, 
+             — выберите категорию «Другое».</p>
+        </li>
+      </ul>
+    </section>
   </main>
 
   <footer class="footer">
@@ -266,6 +291,6 @@
   </footer>
 </body>
 
-<script src="../scripts/ideas-card.js"></script>
+<script src="../scripts/likes.js"></script>
 
 </html>
