--- a/pages/idea.html
+++ b/pages/idea.html
@@ -107,7 +107,7 @@
     <section class="idea">
       <div class="idea__card">
         <small class="idea__tag">#Общественные пространства</small>
-        <h3 class="idea__cardtitle"><a href="./idea.html">Современная детская площадка</a></h3>
+        <h3 class="idea__cardtitle">Современная детская площадка</h3>
         <p class="idea__description">Было бы здорово здесь построить спортивный объект, например многофункциональный крытый футбольный 
           стадион на 15-35тыс, или хоккейную арену на 12-18 тыс., или современный спорт комплекс с большой ареной для проведения матчей ВК "Урала" и.т.д.</p>
         <p class="idea__author">Автор идеи: <span>Анна П.</span></p>
