--- a/pages/idea.html
+++ b/pages/idea.html
@@ -67,41 +67,34 @@
     <section class="titleblock">
       <ul class="breadcrumb" itemscope itemtype="http://schema.org/BreadcrumbList">
         <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a itemprop="item" href="../index.html"> 
-              <span itemprop="name">Главная</span> 
-            </a>
-            <meta itemprop="position" content="1">
-          </li>
+          <a itemprop="item" href="../index.html"> 
+            <span itemprop="name">Главная</span> 
+          </a>
+          <meta itemprop="position" content="1">
+        </li>
 
-          <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a itemprop="item" href="./city.html"> 
-              <span itemprop="name">Екатеринбург</span> 
-            </a>
-            <meta itemprop="position" content="1">
-          </li>
+        <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+          <a itemprop="item" href="./city.html"> 
+            <span itemprop="name">Екатеринбург</span> 
+          </a>
+          <meta itemprop="position" content="2">
+        </li>
           
-          <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a itemprop="item" href="./collection.html"> 
-              <span itemprop="name">Каталог идей</span> 
-            </a>
-            <meta itemprop="position" content="1">
-          </li>
+        <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+          <a itemprop="item" href="./collection.html"> 
+            <span itemprop="name">Каталог идей</span> 
+          </a>
+          <meta itemprop="position" content="3">
+        </li>
 
-          <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a itemprop="item" href="./collection.html"> 
-              <span itemprop="name">Общественные пространства</span> 
-            </a>
-            <meta itemprop="position" content="1">
-          </li>
- 
-          <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <span itemprop="item"> 
-              <span itemprop="name">Современная детская площадка</span> 
-            </span>
-            <meta itemprop="position" content="2">
-         </li>
+        <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
+          <a itemprop="item" href="./collection.html"> 
+            <span itemprop="name">Общественные пространства</span> 
+          </a>
+          <meta itemprop="position" content="4">
+        </li>
       </ul>
-      <h1 class="title">Страница идеи</h1>
+      <h1 class="title">Идея № 12</h1>
     </section>
 
     <section class="idea">
@@ -175,7 +168,7 @@
             <p class="ideas__description">Не плохо было бы убрать тюрьму подальше от цента.А большая часть завода давно</p>
 
             <div class="ideas__footer">
-              <p class="ideas__author">Автор идеи: <span>Вася В.</span></p>
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
               <button class="ideas__like like">
                 <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
@@ -194,7 +187,7 @@
             <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
 
             <div class="ideas__footer">
-              <p class="ideas__author">Автор идеи: <span>Алексей Е.</span></p>
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
               <button class="ideas__like like liked">
                 <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
