--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
   </main>
 
   <footer class="footer">
+    <div class="footer__container">
       <img src="./images/logos/main-logo-white.svg" alt="логотип Института Генплана" class="footer__logo">
       <div class="footer__emails">
         <div><p>техническая поддержка:</p> <a href="mailto:gorod@genplanmos.ru" class="">gorod@genplanmos.ru</a></div>
@@ -309,6 +310,7 @@
         <a href="https://genplanmos.ru/policypersonaldata/" title="политика конфиденциальности">Политика обработки персональных данных</a>
         <a href="https://genplanmos.ru/" title="сайт Института Генплана Москвы">Государственное автономное учреждение «Институт Генплана Москвы»</a>
       </div>
+    </div>
   </footer>
 </body>
 
