fix: rename classes

--- a/index.html
+++ b/index.html
@@ -116,23 +116,23 @@
       </div>
     </section>
 
-    <section class="navigation">
-      <a href="#" class="navigation__button">
-        <div class="navigation__container">
-          <h3 class="navigation__city">Южно-Сахалинск</h3>
-          <p class="navigation__advice">Оставить идею</p>
+    <section class="lead-buttons">
+      <a href="#" class="lead-buttons__button">
+        <div class="lead-buttons__container">
+          <h3 class="lead-buttons__city">Южно-Сахалинск</h3>
+          <p class="lead-buttons__advice">Оставить идею</p>
         </div>
       </a>
-      <a href="#" class="navigation__button">
-        <div class="navigation__container">
-          <h3 class="navigation__city">Уфа</h3>
-          <p class="navigation__advice">Оставить идею</p>
+      <a href="#" class="lead-buttons__button">
+        <div class="lead-buttons__container">
+          <h3 class="lead-buttons__city">Уфа</h3>
+          <p class="lead-buttons__advice">Оставить идею</p>
         </div>
       </a>
-      <a href="#" class="navigation__button">
-        <div class="navigation__container">
-          <h3 class="navigation__city">Екатеринбург</h3>
-          <p class="navigation__advice">Оставить идею</p>
+      <a href="#" class="lead-buttons__button">
+        <div class="lead-buttons__container">
+          <h3 class="lead-buttons__city">Екатеринбург</h3>
+          <p class="lead-buttons__advice">Оставить идею</p>
         </div>
       </a>
     </section>
@@ -255,7 +255,6 @@
        </li>
       </ul>
     </section>
-
 
     <section class="about">
       <h2 class="title">Зачем нужна карта</h2>
