--- a/pages/city.html
+++ b/pages/city.html
@@ -122,7 +122,7 @@
         <li class="ideas__item">
           <img src="../images/cardimage/ideas1.jpg" alt="Идея1" class="ideas__img">
           <div class="ideas__card">
-            <small class="ideas__tag">#Общественные пространства</small>
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
             <h3 class="ideas__cardtitle"><a href="./idea.html">Современная детская площадка</a></h3>
             <p class="ideas__description">Проблема в том, что в этом парке нет элементарного пешеходного покрытия и нет освещения</p>
   
@@ -142,7 +142,7 @@
         <li class="ideas__item">
           <img src="../images/cardimage/ideas2.jpg" alt="Идея1" class="ideas__img">
           <div class="ideas__card">
-            <small class="ideas__tag">#Функциональные зоны</small>
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
             <h3 class="ideas__cardtitle"><a href="./idea.html">Функциональное пространство</a></h3>
             <p class="ideas__description">Не плохо было бы убрать тюрьму подальше от цента.А большая часть завода давно</p>
 
@@ -161,7 +161,7 @@
         <li class="ideas__item">
           <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
           <div class="ideas__card">
-            <small class="ideas__tag">#Общественные пространства</small>
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
             <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
             <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
 
