--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../images/favicons/favicon-180x180.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Карта идей г. Екатеринбург</title>
+  <title>Каталог идей</title>
   <link rel="stylesheet" href="../styles/css/index.css">
 </head>
 <body class="page">
@@ -79,64 +79,51 @@
           </a>
           <meta itemprop="position" content="2">
         </li>
-          
-        <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-          <a itemprop="item" href="./catalog.html"> 
-            <span itemprop="name">Каталог идей</span> 
-          </a>
-          <meta itemprop="position" content="3">
-        </li>
+      </ul>
+      <h1 class="title">Каталог идей</h1>
+    </section>
 
-        <li class="breadcrumb__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-          <a itemprop="item" href="./catalog.html"> 
-            <span itemprop="name">Общественные пространства</span> 
-          </a>
-          <meta itemprop="position" content="4">
+
+    <section class="map" >
+      <div class="map__map" id="ekbmap"></div>
+    </section>
+
+    <section class="catalog">
+      <ul class="catalog__list ">
+        <li class="catalog__item active">
+          <a href="#">Все идеи</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Жилая застройка</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Общественные пространства</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Природа и экология</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Социальная инфраструктура</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Экономика и развитие</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Туризм и рекреакция</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Улично-дорожная сеть</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Инженерная инфраструктура</a>
+        </li>
+        <li class="catalog__item">
+          <a href="#">Другое</a>
         </li>
       </ul>
-      <h1 class="title">Идея № 12</h1>
     </section>
 
-    <section class="idea">
-      <div class="idea__card">
-        <small class="idea__tag"><a href="#" class=""># Общественные пространства</a></small>
-        <h3 class="idea__cardtitle">Современная детская площадка</h3>
-        <p class="idea__description">Было бы здорово здесь построить спортивный объект, например многофункциональный крытый футбольный 
-          стадион на 15-35тыс, или хоккейную арену на 12-18 тыс., или современный спорт комплекс с большой ареной для проведения матчей ВК "Урала" и.т.д.</p>
-        <p class="idea__author">Автор идеи: <span>Анна П.</span></p>
-        <div class="idea__map">
-          <img src="../images/cardimage/ideamap.png" alt="здесь будет карта">
-        </div>
-
-        <div class="idea__buttons">
-          <a href="#" class="idea__button">
-            <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.0015 1.00151L1.00302 10L10.0015 18.9985" stroke="inherit"/>
-              <path d="M19 10L1 10" stroke="inherit"/>
-            </svg>
-            Предыдущая идея
-          </a>
-          <div class="idea__like-box">
-            <button class="idea__like like">
-              <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
-                <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
-              </svg>
-            </button>
-            <span class="idea__like-counter">12</span>
-          </div>
-          <a href="#" class="idea__button">
-            Следующая идея
-            <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M8.00255 1.00136L16.0012 9L8.00255 16.9986" stroke="inherit"/>
-              <path d="M16 9L0 9" stroke="inherit"/>
-            </svg>
-          </a>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="ideas">
+    <section class="catalog__ideas">
       <h2 class="ideas__title">Другие идеи пользователя</h2>
 
       <ul class="ideas__list">
@@ -202,42 +189,7 @@
       <a href="#" class="ideas__showmore">Смотреть все идеи</a>
     </section>
 
-    <section class="classificator">
-      <h2 class="classificator__title">Другие идеи по разделам</h2>
 
-      <ul class="classificator__list ">
-        <li class="classificator__item active">
-          <a href="#">Все идеи</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Жилая застройка</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Общественные пространства</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Природа и экология</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Социальная инфраструктура</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Экономика и развитие</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Туризм и рекреакция</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Улично-дорожная сеть</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Инженерная инфраструктура</a>
-        </li>
-        <li class="classificator__item">
-          <a href="#">Другое</a>
-        </li>
-      </ul>
-    </section>
   </main>
 
   <footer class="footer">
