feat: about project page

--- a/pages/city.html
+++ b/pages/city.html
@@ -99,13 +99,10 @@
           режимы деятельности организаций и эксплуатация сооружений. Эти предложения будут направлены для рассмотрения в Администрацию Уфы.
         </p>
         <p> 
-          Благодарим всех, кто оставил предложения на интерактивной карте.
+          Благодарим всех, кто оставил предложения на интерактивной карте. 
         </p>
         <p>
-          В 2021 году планируется проведение общественных обсуждений по проекту Генерального плана Уфы, в ходе которых все предложения 
-          будут в обязательном порядке внесены в протокол. По итогам общественных обсуждений будет подготовлено и опубликовано заключение 
-          об их результатах. Сроки проведения общественных обсуждений будут определяться Советом городского округа города Уфы. Информация 
-          о принятии Советом соответствующего решения будет опубликована в официальном порядке.
+          Более подробно о проекте можно узнать на соответствующей <a href="./project-info.html" class="">странице</a>.
         </p>
       </div>
     </section>
