--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -88,43 +88,47 @@
       <div class="map__map" id="ekbmap"></div>
     </section>
 
-    <section class="catalog">
-      <ul class="catalog__list ">
-        <li class="catalog__item active">
+    <section class="classificator classificator__pushed">
+      <ul class="classificator__list ">
+        <li class="classificator__item active">
           <a href="#">Все идеи</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Жилая застройка</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Общественные пространства</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Природа и экология</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Социальная инфраструктура</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Экономика и развитие</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Туризм и рекреакция</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Улично-дорожная сеть</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Инженерная инфраструктура</a>
         </li>
-        <li class="catalog__item">
+        <li class="classificator__item">
           <a href="#">Другое</a>
         </li>
       </ul>
     </section>
 
     <section class="catalog__ideas">
-      <h2 class="ideas__title">Другие идеи пользователя</h2>
+
+      <ul class="catalog__list">
+        <li class="catalog__item active"><a href="#">Сначала новые</a></li>
+        <li class="catalog__item"><a href="#">Сначала популярные</a></li>
+      </ul>
 
       <ul class="ideas__list">
         <li class="ideas__item">
@@ -136,7 +140,7 @@
   
             <div class="ideas__footer">
               <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
-              <button class="ideas__like like">
+              <button class="ideas__like like liked">
                 <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
                 </svg>
@@ -175,7 +179,121 @@
 
             <div class="ideas__footer">
               <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
+              <button class="ideas__like like ">
+                <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
+                </svg>
+              </button>
+              <span class="ideas__like-counter">3</span>
+            </div>
+          </div>
+        </li>
+
+        <li class="ideas__item">
+          <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
+          <div class="ideas__card">
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
+            <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
+
+            <div class="ideas__footer">
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
+              <button class="ideas__like like ">
+                <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
+                </svg>
+              </button>
+              <span class="ideas__like-counter">3</span>
+            </div>
+          </div>
+        </li>
+
+        <li class="ideas__item">
+          <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
+          <div class="ideas__card">
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
+            <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
+
+            <div class="ideas__footer">
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
               <button class="ideas__like like liked">
+                <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
+                </svg>
+              </button>
+              <span class="ideas__like-counter">3</span>
+            </div>
+          </div>
+        </li>
+
+        <li class="ideas__item">
+          <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
+          <div class="ideas__card">
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
+            <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
+
+            <div class="ideas__footer">
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
+              <button class="ideas__like like ">
+                <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
+                </svg>
+              </button>
+              <span class="ideas__like-counter">3</span>
+            </div>
+          </div>
+        </li>
+
+        <li class="ideas__item">
+          <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
+          <div class="ideas__card">
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
+            <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
+
+            <div class="ideas__footer">
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
+              <button class="ideas__like like ">
+                <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
+                </svg>
+              </button>
+              <span class="ideas__like-counter">3</span>
+            </div>
+          </div>
+        </li>
+
+        <li class="ideas__item">
+          <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
+          <div class="ideas__card">
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
+            <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
+
+            <div class="ideas__footer">
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
+              <button class="ideas__like like ">
+                <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
+                </svg>
+              </button>
+              <span class="ideas__like-counter">3</span>
+            </div>
+          </div>
+        </li>
+
+        <li class="ideas__item">
+          <img src="../images/cardimage/ideas3.jpg" alt="Идея1" class="ideas__img">
+          <div class="ideas__card">
+            <small class="ideas__tag"><a href="#" class=""># Общественные пространства</a></small>
+            <h3 class="ideas__cardtitle"><a href="./idea.html">РАСШИРЕНИЕ ДОРОЖНЫЙ ИНФРАСТРУКТУРЫ</a></h3>
+            <p class="ideas__description">Сегодня апрель 2021 года. Единственная дорога в город в одну полосу в одном</p>
+
+            <div class="ideas__footer">
+              <p class="ideas__author">Автор идеи: <span>Анна П.</span></p>
+              <button class="ideas__like like ">
                 <svg width="18" height="16" viewBox="0 0 18 16"  xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.36526 8.97644L8.60753 14.8546C8.71157 14.9586 8.85033 15.0106 9.00638 15.0106C9.14514 15.0106 9.28378 14.9586 9.40523 14.8546L15.6475 8.97644C16.5665 8.0574 17 6.86096 17 5.66446C17 4.46797 16.5491 3.27159 15.6475 2.35249C14.8325 1.53749 13.7921 1.17336 12.7171 1.17336C11.4167 1.17336 10.0469 1.72827 9.05858 2.71663C9.04128 2.71663 9.04128 2.73393 9.02386 2.73393C9.00656 2.73393 9.00656 2.73393 8.98914 2.71663C8.0701 1.86702 6.89109 1 5.69471 1C4.49815 1.00012 3.267 1.45087 2.3655 2.35261C0.544834 4.15586 0.544596 7.15577 2.36526 8.97644Z"  stroke-width="1.2"/>
                 </svg>
@@ -186,7 +304,68 @@
         </li>
       </ul>
 
-      <a href="#" class="ideas__showmore">Смотреть все идеи</a>
+      <ul class="pagination">
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            <svg width="28" height="28" viewBox="0 0 28 28" >
+              <use xlink:href="../images/sprite.svg#small-button-left-rounded"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="pagination__item active">
+          <a href="#" class="pagination__link">
+            1
+          </a>
+        </li>
+        <li class="pagination__item ">
+          <a href="#" class="pagination__link">
+            2
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            3
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            4
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            5
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            6
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            7
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            8
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            9
+          </a>
+        </li>
+        <li class="pagination__item">
+          <a href="#" class="pagination__link">
+            <svg width="28" height="28" viewBox="0 0 28 28" >
+              <use xlink:href="../images/sprite.svg#small-button-right-rounded"></use>
+            </svg>
+        </a>
+        </li>
+      </ul>
+
     </section>
 
 
