--- a/pages/idea.html
+++ b/pages/idea.html
@@ -199,7 +199,7 @@
         </li>
       </ul>
 
-      <a href="#" class="ideas__showmore">Смотреть все идеи</a>
+      <a href="./catalog.html" class="ideas__showmore">Смотреть все идеи</a>
     </section>
 
     <section class="classificator">
