--- a/pages/project-info.html
+++ b/pages/project-info.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../images/favicons/favicon-180x180.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Каталог идей</title>
+  <title>О проекте</title>
   <link rel="stylesheet" href="../styles/css/index.css">
 </head>
 <body class="page">
@@ -97,7 +97,7 @@
       </div>
     </section>
 
-    <section class="accordions">
+    <section class="accordions" id="accordions1">
       <h2 class="accordions__title">Категории идей</h2>
 
       <ul class="accordions__list">
@@ -319,6 +319,9 @@
   </footer>
 </body>
 
-<script src="../scripts/likes.js"></script>
+<script type="module" src="../scripts/index.js"></script>
 
+<script type="module" >
+  initAccordion('#accordions1')
+</script>
 </html>
