feat: страницы авторизации, смены пароля, профиля, модерации идей

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li class="header__item"><a href="./pages/city.html" class="header__link">Уфа</a></li>
           <li class="header__item"><a href="./pages/city.html" class="header__link">Южно-Сахалинск</a></li>
           <li class="header__item"><a href="./pages/about-service.html" class="header__link">О сервисе</a></li>
-          <li class="header__item"><a href="#" class="header__link">Модерация</a></li>
+          <li class="header__item"><a href="./pages/login.html" class="header__link">Модерация</a></li>
 
           <li class="header__list-social">
             <ul>
