--- a/pages/idea.html
+++ b/pages/idea.html
@@ -31,11 +31,11 @@
         </button>
 
         <ul class="header__list">
-          <li class="header__item"><a href="#" class="header__link">Екатеринбург</a></li>
-          <li class="header__item"><a href="#" class="header__link">Уфа</a></li>
-          <li class="header__item"><a href="#" class="header__link">Южно-Сахалинск</a></li>
-          <li class="header__item"><a href="#" class="header__link">О сервисе</a></li>
-          <li class="header__item"><a href="#" class="header__link">Модерация</a></li>
+          <li class="header__item"><a href="./city.html" class="header__link">Екатеринбург</a></li>
+          <li class="header__item"><a href="./city.html" class="header__link">Уфа</a></li>
+          <li class="header__item"><a href="./city.html" class="header__link">Южно-Сахалинск</a></li>
+          <li class="header__item"><a href="./about-service.html" class="header__link">О сервисе</a></li>
+          <li class="header__item"><a href="./login.html" class="header__link">Модерация</a></li>
 
           <li class="header__list-social">
             <ul>
