--- a/pages/restore-pass.html
+++ b/pages/restore-pass.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../images/favicons/favicon-180x180.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Вход в личный кабинет</title>
+  <title>Восстановить пароль</title>
   <link rel="stylesheet" href="../styles/css/index.css">
 </head>
 <body class="page">
@@ -73,33 +73,21 @@
           <meta itemprop="position" content="1">
         </li>
       </ul>
-      <h1 class="title">Вход в личный кабинет</h1>
+      <h1 class="title">Восстановление пароля</h1>
     </section>
+    
 
     <form action="" class="auth" novalidate>
+
+      <p class="auth__message">Введите почту и мы вышлем вам новый пароль.</p>
+
       <div class="auth__input-group is-invalid required">
         <label class="auth__label" for="email">Е - mail</label>
         <input class="auth__input labeledinput" id="email" type="text" value="" maxlength="70" required>
         <span class="auth__err">То, как будет выглядеть ошибка поля</span>
       </div>
 
-      <div class="auth__input-group is-valid required">
-        <label class="auth__label" for="pass">Пароль</label>
-        <input class="auth__input  labeledinput " id="pass" type="password" value="" placeholder="" maxlength="30" required>
-        <span class="auth__err"></span>
-      </div>
-
-
-      <div class="auth__input-group auth__input-group_line">
-        <label class="auth__check-label" for="feedbackForm_consent">
-          <input class="auth__check" type="checkbox" value="0" id="feedbackForm_consent" required>
-          <span class="auth__check-v"></span>
-          <span class="auth__check-description">Запомнить меня</span>
-        </label>
-
-        <a href="./restore-pass.html" class="auth__helplink">Забыли пароль?</a>
-      </div>
-      <button type="submit" class="auth__button">Войти в личный кабинет</button>
+      <button type="submit" class="auth__button">Восстановить</button>
     </form>
 
   </main>
