--- a/pages/idea.html
+++ b/pages/idea.html
@@ -35,8 +35,7 @@
           <li class="header__item"><a href="./city.html" class="header__link">Уфа</a></li>
           <li class="header__item"><a href="./city.html" class="header__link">Южно-Сахалинск</a></li>
           <li class="header__item"><a href="./about-service.html" class="header__link">О сервисе</a></li>
-          <li class="header__item"><a href="./login.html" class="header__link">Модерация</a></li>
-
+          <li class="header__item"><a href="./moderation.html" class="header__link">Модерация</a></li>
           <li class="header__list-social">
             <ul>
               <li class="header__item">
