feat: страница редактирования идеи

--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
     </section>
 
     <section class="lead-buttons">
-      <a href="#" class="lead-buttons__button">
+      <a href="./pages/city.html" class="lead-buttons__button">
         <div class="lead-buttons__container">
           <h3 class="lead-buttons__city">Южно-Сахалинск</h3>
           <p class="lead-buttons__advice">Оставить идею</p>
         </div>
       </a>
-      <a href="#" class="lead-buttons__button">
+      <a href="./pages/city.html" class="lead-buttons__button">
         <div class="lead-buttons__container">
           <h3 class="lead-buttons__city">Уфа</h3>
           <p class="lead-buttons__advice">Оставить идею</p>
         </div>
       </a>
-      <a href="#" class="lead-buttons__button">
+      <a href="./pages/city.html" class="lead-buttons__button">
         <div class="lead-buttons__container">
           <h3 class="lead-buttons__city">Екатеринбург</h3>
           <p class="lead-buttons__advice">Оставить идею</p>
