--- a/pages/new-pass.html
+++ b/pages/new-pass.html
@@ -96,19 +96,19 @@
 
       <div class="auth__input-group is-invalid required">
         <label class="auth__label" for="oldpass">Старый пароль</label>
-        <input class="auth__input labeledinput" id="oldpass" type="text" value="" maxlength="70" required>
+        <input class="auth__input labeledinput" id="oldpass" type="password" value="" maxlength="70" required>
         <span class="auth__err">Вы указали некорректный пароль</span>
       </div>
 
       <div class="auth__input-group required">
         <label class="auth__label" for="newpass1">Новый пароль</label>
-        <input class="auth__input labeledinput" id="newpass1" type="text" value="" maxlength="70" required>
+        <input class="auth__input labeledinput" id="newpass1" type="password" value="" maxlength="70" required>
         <span class="auth__err"></span>
       </div>
 
       <div class="auth__input-group required">
         <label class="auth__label" for="newpass2">Повторите новый пароль</label>
-        <input class="auth__input labeledinput" id="newpass2" type="text" value="" maxlength="70" required>
+        <input class="auth__input labeledinput" id="newpass2" type="password" value="" maxlength="70" required>
         <span class="auth__err"></span>
       </div>
 
